# docs/swagger.json
@@ -37,7 +37,7 @@
                 "parameters": [
                     {
                         "description": "value",
-                        "name": "Key",
+                        "name": "NextQuestion",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -48,6 +48,24 @@
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/renderings.NextQuestionResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/renderings.NextQuestionResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/renderings.NextQuestionResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/renderings.NextQuestionResponse"
                         }
